Fixed issue for footer line spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1810,7 +1810,7 @@ section {
 }
 
 .footer .footer-info .logo {
-  line-height: 0;
+  /* line-height: 0; */
   margin-bottom: 25px;
 }
 
